<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/piTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/weatherwiz_status"
            android:textColor="#1b6f16"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/allRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_colors"
            android:text="@string/view_all_res"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/quickRun"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="393dp"
            android:layout_height="395dp"
            android:layout_marginTop="9dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noConnection">

            <TextView
                android:id="@+id/gwTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gardenwiz_data"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/name_of_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/name_of_run" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/durationList"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/durationList" />

            <TextView
                android:id="@+id/temperature"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperatureList" />

            <TextView
                android:id="@+id/moisture"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moistureList" />

            <TextView
                android:id="@+id/humidity"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidList" />

            <TextView
                android:id="@+id/ph"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phList" />

            <TextView
                android:id="@+id/rain"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rainList" />

            <TextView
                android:id="@+id/lumen"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lightList" />

            <ListView
                android:id="@+id/plantslistView"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/noConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ifnotconnected"
            app:layout_constraintTop_toBottomOf="@+id/piTitle"
            app:srcCompat="@drawable/no_signalicon"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quickRun"
            android:layout_width="129dp"
            android:layout_height="51dp"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_colors"
            android:text="@string/quick_run"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/advRun"
            android:layout_width="129dp"
            android:layout_height="51dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_colors"
            android:text="@string/advanced_run"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>