<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="569dp"
            android:layout_height="731dp"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/gradient_green" />

        <TextView
            android:id="@+id/weatherwiz"
            android:layout_width="265dp"
            android:layout_height="63dp"
            android:layout_marginTop="29dp"
            android:text="@string/weather_wiz"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topPhoto"
            android:layout_width="250dp"
            android:layout_height="229dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/topphoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherwiz"
            app:srcCompat="@drawable/plant_image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pi_go"
            android:layout_width="160dp"
            android:layout_height="59dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_colors"
            android:text="@string/run_pi"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topPhoto" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search"
            android:layout_width="160dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_colors"
            android:text="@string/search_plants"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pi_go" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/history"
            android:layout_width="160dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_colors"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>