<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.GardenWiz_v3"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/indoorSwitch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/indoor"
                app:layout_constraintTop_toBottomOf="@+id/edibleSwitch"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/indoor"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/indoors"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edibleView" />

            <Spinner
                android:id="@+id/droughtSpin"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/droughtView"
                app:layout_constraintTop_toBottomOf="@+id/bloomSpin"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/durationSpin"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/durationView"
                app:layout_constraintTop_toBottomOf="@+id/droughtSpin"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/durationView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/duration"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/droughtView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stateView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/state"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edibleView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/edible"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commercialView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/droughtView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/drought_tolerance"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bloomView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/commercialView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/commercial_availability"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bloomView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/bloom_period"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seasonView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seasonView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/season"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeView" />

            <Spinner
                android:id="@+id/commSpin"
                android:layout_width="190dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toEndOf="@+id/commercialView"
                app:layout_constraintTop_toBottomOf="@+id/durationSpin"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Spinner
                android:id="@+id/bloomSpin"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/bloomView"
                app:layout_constraintTop_toBottomOf="@+id/seasonSpinner"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/typeView"
                app:layout_constraintTop_toBottomOf="@+id/spinner_state"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/seasonSpinner"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/seasonView"
                app:layout_constraintTop_toBottomOf="@+id/spinner_type"
                tools:ignore="SpeakableTextPresentCheck" />

            <Switch
                android:id="@+id/edibleSwitch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/edibleView"
                app:layout_constraintTop_toBottomOf="@+id/commSpin" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/name_run"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/typeView"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/pressed_green"
                android:text="@string/plant_type"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stateView" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:ems="10"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/stateView"
                app:layout_constraintTop_toBottomOf="@+id/name_input"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="343dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:text="@string/FR_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>